# orga_5

./: .env.example  .gitignore  AGENT.md  README.md  docker-compose.yml
.codex/: glossary.md  prompt_rules.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend.yml  docker-smoke.yml  frontend.yml
PS1/: dev_down.ps1  dev_seed_planning.ps1  dev_up.ps1  seed.ps1  smoke.ps1
agents/: README.md
agents/STEP_00_scaffold/: AGENT.md
agents/STEP_01_auth_rbac/: AGENT.md
agents/STEP_02_missions_assignments/: AGENT.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_planning.py  202409071200_create_users.py
backend/app/: auth.py  crud.py  db.py  deps.py  main.py  models.py  planning.py  requirements.txt  schemas.py  seed.py
backend/app/core/: config.py  security.py
backend/migrations/: env.py  script.py.mako
backend/tests/: test_auth.py  test_auth_login.py  test_health_db.py  test_healthz.py  test_planning.py
deploy/: Caddyfile
deploy/dev/: Caddyfile  compose.yaml
docs/: README.fr.md
docs/roadmap/: index.md  roadmap_00_scaffold.md  roadmap_01_auth_rbac.md  roadmap_full_stack_baseline.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/src/: App.test.tsx  App.tsx  auth.tsx  main.tsx  planning.test.tsx  planning.tsx
frontend/src/lib/: api.ts  (+2 more)
frontend/tests/: smoke.spec.ts
(+6 files in other folders)
